<resources>
    <string name="app_name">Clicker</string>
    <string name="moreTimeStr">עוד 30 שנ</string>
    <string name="stopTimeStr">סיים מענה</string>
    <string name="newQuestionStr">שאלה חדשה</string>
    <string name="defaultTimeSec">30</string>
    <string name="defaultTimeMin">00</string>
    <string name="answerYes">ענו כן</string>
    <string name="answerNo">ענו לא</string>
    <string name="sendQuestionStr">שלח שאלה</string>
    <string name="createClassStr">צור</string>
    <string name="defaultStudentsNumStr">100</string>
    <string name="newClassStr">כיתה חדשה</string>
    <string name="classNameStr">שם הכיתה</string>
    <string name="eraseQuestionStr">מחק</string>
    <string name="typeQuestionHereStr">כתוב את השאלה כאן</string>
    <string name="questionStr">שאלה</string>
    <string name="timeSeperatorStr">:</string>
    <string name="timeStr">זמן</string>
    <string name="changeBTname">Change BT Name</string>
    <string name="changeBLEname">Change BLE Name</string>
    <string name="scanBTdevices">Scan BT Devices</string>
    <string name="scanBLEdevices">Scan BLE Devices</string>
    <string name="enableBTDiscoverability">Enable BT Discoverability</string>
    <string name="enableBLE">Enable BLE</string>
    <string name="durationOfScanStr">Set duration of Scan BLE Devices</string>
    <string name="search_devices">Search</string>
    <string name="stop_search_devices">Stop Search</string>
</resources>
