<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.clicker.clicker.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_weight="0.11">

            <Button
                android:text="צור"
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:id="@+id/createClassButton"
                android:onClick="createClassButtonOnClick"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="כיתה חדשה"
                android:ems="10"
                android:id="@+id/classNameText"
                android:layout_weight="1"
                android:textSize="14sp"
                android:singleLine="false" />

            <TextView
                android:text="שם הכיתה"
                android:layout_width="152dp"
                android:layout_height="match_parent"
                android:id="@+id/classNameLabel" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_weight="0.37">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="כתוב את השאלה כאן"
                android:ems="10"
                android:id="@+id/questionText"
                android:textSize="14sp"
                android:layout_weight="1.46"
                android:visibility="invisible" />

            <TextView
                android:text="שאלה"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/questionLabel"
                android:layout_weight="1"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="190dp"
            android:layout_height="106dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="15dp"
            android:weightSum="1"
            android:id="@+id/pieChartGrid">

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <EditText
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/timeMinText"
                android:text="@string/defaultTimeMin"
                android:textStyle="normal|bold"
                android:visibility="invisible"
                android:layout_width="25dp"
                android:layout_marginLeft="20dp"
                android:maxLength="2"
                android:width="100dp"
                android:layout_weight="0.08" />

            <TextView
                android:text=":"
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:id="@+id/timeSeperatorLabel"
                android:textSize="24sp"
                android:textStyle="normal|bold"
                android:visibility="invisible" />

            <EditText
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:ems="10"
                android:id="@+id/timeSecText"
                android:text="@string/defaultTimeSec"
                android:textAlignment="center"
                android:textStyle="normal|bold"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_weight="0.05"
                android:visibility="invisible"
                android:maxLength="2"
                android:width="100dp" />

            <TextView
                android:text="זמן"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/timeLabel"
                android:layout_weight="0.00"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="62dp">

            <Button
                android:text="@string/moreTimeStr"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:id="@+id/buttonLeft"
                android:layout_weight="0.05"
                android:elevation="0dp"
                android:onClick="leftButtonOnClick"
                android:visibility="invisible" />

            <Button
                android:text="@string/newQuestionStr"
                android:layout_width="131dp"
                android:layout_height="wrap_content"
                android:id="@+id/buttonRight"
                android:layout_weight="0.04"
                android:onClick="rightButtonOnClick"
                android:visibility="invisible" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
